--- a/任务二/Task2.ipynb
+++ b/任务二/Task2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -158,18 +158,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([0, 0, 2, 1, 4, 1, 2, 2, 3, 3, 2, 2, 2, 2, 1, 2, 2, 3, 2, 1, 2, 3, 1, 1,\n",
-       "        2, 3, 1, 1, 2, 2, 1, 2, 2, 2, 1, 2, 1, 2, 2, 3, 4, 2, 3, 2, 2, 3, 2, 2,\n",
-       "        3, 2, 3, 2, 3, 2], device='cuda:0')"
+       "tensor([4, 3, 2, 2, 2, 2, 3, 1, 2, 2, 3, 2, 2, 2, 2, 1, 3, 2, 2, 2, 3, 3, 2, 0,\n",
+       "        3, 3, 0, 1, 3, 2, 2, 2, 3, 2, 0, 2, 2, 3, 1, 3, 2, 2, 1, 2, 2, 2, 0, 2,\n",
+       "        2, 2, 2, 1, 1, 3], device='cuda:0')"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,18 +273,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/xiyu/anaconda3/lib/python3.7/site-packages/torch/nn/_reduction.py:46: UserWarning: size_average and reduce args will be deprecated, please use reduction='sum' instead.\n",
+      "  warnings.warn(warning.format(ret))\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training loss for epoch 1 is 1.13603887535111 and accuracy is 59221/109242 = 54%\n",
-      "Training loss for epoch 2 is 0.9715498869099713 and accuracy is 66505/109242 = 60%\n",
-      "Training loss for epoch 3 is 0.916336085795003 and accuracy is 69105/109242 = 63%\n",
-      "Training loss for epoch 4 is 0.8851783196030995 and accuracy is 70590/109242 = 64%\n",
-      "Training loss for epoch 5 is 0.8619078225531286 and accuracy is 71719/109242 = 65%\n"
+      "Training loss for epoch 1 is 1.1370483448093305 and accuracy is 59267/109242 = 54%\n",
+      "Valid loss for epoch 1 is 1.0741286979103961 and accuracy is 27113/46818 = 57%\n",
+      "Training loss for epoch 2 is 0.9743161132597954 and accuracy is 66223/109242 = 60%\n",
+      "Valid loss for epoch 2 is 1.0265675432338093 and accuracy is 27975/46818 = 59%\n",
+      "Training loss for epoch 3 is 0.9224444944898141 and accuracy is 68846/109242 = 63%\n",
+      "Valid loss for epoch 3 is 1.020761139547969 and accuracy is 28747/46818 = 61%\n",
+      "Training loss for epoch 4 is 0.8891068968891004 and accuracy is 70513/109242 = 64%\n",
+      "Valid loss for epoch 4 is 1.0351875576827725 and accuracy is 28750/46818 = 61%\n",
+      "Training loss for epoch 5 is 0.8654906678707414 and accuracy is 71486/109242 = 65%\n",
+      "Valid loss for epoch 5 is 1.0427590663951793 and accuracy is 28998/46818 = 61%\n"
      ]
     }
    ],
@@ -317,62 +330,38 @@
     "    accuracy = 100.0 * running_correct / len(train_iterator.dataset)\n",
     "    \n",
     "    print(f'Training loss for epoch {epoch + 1} is {loss} and accuracy is {running_correct}/{len(train_iterator.dataset)} = {accuracy}%')\n",
-    "        \n",
-    "#     prediction = net(batch.Phrase)\n",
-    "    \n",
-    "#     loss = F.nll_loss(prediction,batch.Sentiment)\n",
-    "    \n",
-    "#     optimizer.zero_grad()\n",
-    "#     loss.backward()\n",
-    "#     optimizer.step()\n",
-    "#     if t % 5 == 0:\n",
-    "#         print('Loss:', loss.detach().numpy())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Valid loss is 1.0688864415721313 and accuracy is 28547/46818 = 60%\n"
-     ]
-    }
-   ],
-   "source": [
-    "## For validating\n",
-    "    \n",
-    "net.eval() #测试模式\n",
-    "volatile = True\n",
-    "    \n",
-    "running_loss = 0.0\n",
-    "running_correct = 0\n",
-    "    \n",
-    "for batch_idx, batch in enumerate(valid_iterator):\n",
-    "    text, label = batch.Phrase , batch.Sentiment\n",
-    "    if torch.cuda.is_available():\n",
-    "        text, label = text.cuda(), label.cuda()\n",
-    "            \n",
-    "#       optimizer.zero_grad()\n",
-    "    prediction = net(text)\n",
-    "        \n",
-    "    loss = F.nll_loss(prediction,label)\n",
-    "        \n",
-    "    running_loss += F.nll_loss(prediction,label,size_average=False).item()\n",
-    "    preds = prediction.data.max(dim=1,keepdim=True)[1]\n",
-    "    running_correct += preds.eq(label.data.view_as(preds)).cpu().sum()\n",
-    "            \n",
-    "            \n",
-    "#         loss.backward()\n",
-    "#         optimizer.step()\n",
     "\n",
-    "loss = running_loss/len(valid_iterator.dataset)\n",
-    "accuracy = 100. * running_correct/len(valid_iterator.dataset)\n",
     "    \n",
-    "print(f'Valid loss is {loss} and accuracy is {running_correct}/{len(valid_iterator.dataset)} = {accuracy}%')\n"
+    "    ## For validating\n",
+    "    \n",
+    "    net.eval() # 评估模式\n",
+    "    volatile = True\n",
+    "    \n",
+    "    valid_loss = 0.0\n",
+    "    valid_correct = 0\n",
+    "    \n",
+    "    for batch_idx, batch in enumerate(valid_iterator):\n",
+    "        text, label = batch.Phrase , batch.Sentiment\n",
+    "        if torch.cuda.is_available():\n",
+    "            text, label = text.cuda(), label.cuda()\n",
+    "            \n",
+    "    #       optimizer.zero_grad()\n",
+    "        prediction1 = net(text)\n",
+    "        \n",
+    "        loss = F.nll_loss(prediction1,label)\n",
+    "        \n",
+    "        valid_loss += F.nll_loss(prediction1,label,size_average=False).item()\n",
+    "        preds1 = prediction1.data.max(dim=1,keepdim=True)[1]\n",
+    "        valid_correct += preds1.eq(label.data.view_as(preds1)).cpu().sum()\n",
+    "            \n",
+    "            \n",
+    "    #         loss.backward()\n",
+    "    #         optimizer.step()\n",
+    "\n",
+    "    loss1 = valid_loss/len(valid_iterator.dataset)\n",
+    "    accuracy1 = 100. * valid_correct/len(valid_iterator.dataset)\n",
+    "    \n",
+    "    print(f'Valid loss for epoch {epoch + 1} is {loss1} and accuracy is {valid_correct}/{len(valid_iterator.dataset)} = {accuracy1}%')\n"
    ]
   },
   {
@@ -430,7 +419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
