--- a/任务二/Task2.ipynb
+++ b/任务二/Task2.ipynb
@@ -164,9 +164,9 @@
     {
      "data": {
       "text/plain": [
-       "tensor([4, 3, 2, 2, 2, 2, 3, 1, 2, 2, 3, 2, 2, 2, 2, 1, 3, 2, 2, 2, 3, 3, 2, 0,\n",
-       "        3, 3, 0, 1, 3, 2, 2, 2, 3, 2, 0, 2, 2, 3, 1, 3, 2, 2, 1, 2, 2, 2, 0, 2,\n",
-       "        2, 2, 2, 1, 1, 3], device='cuda:0')"
+       "tensor([2, 1, 3, 2, 2, 2, 2, 4, 2, 2, 3, 1, 4, 2, 2, 2, 1, 2, 2, 2, 1, 1, 3, 1,\n",
+       "        2, 1, 3, 0, 2, 3, 1, 2, 3, 4, 3, 4, 2, 3, 2, 2, 0, 2, 3, 2, 2, 2, 2, 2,\n",
+       "        2, 2, 3, 2, 1, 2], device='cuda:0')"
       ]
      },
      "execution_count": 9,
@@ -211,7 +211,7 @@
     "        self.bs = bs # batch_size\n",
     "        self.e = nn.Embedding(n_vocab, n_hidden) # embedding,[vocab_size, embed_dim]\n",
     "        self.rnn = nn.LSTM(n_hidden, n_hidden) # [input_size, output_size]\n",
-    "        self.fc2 = nn.Linear(n_hidden, n_cat) # [output_size, n_category] 5分类\n",
+    "        self.fc = nn.Linear(n_hidden, n_cat) # [output_size, n_category] 5分类\n",
     "        self.softmax = nn.LogSoftmax(dim = -1)\n",
     "        \n",
     "    def forward(self, x):\n",
@@ -221,8 +221,8 @@
     "        e_out = self.e(x) # [batch_size,seqlen,dim]\n",
     "        rnn_o, _ = self.rnn(e_out) # [batch_size,seqlen,output_dim]\n",
     "        mean_token_output = torch.mean(rnn_o, dim=1) # Mean\n",
-    "        fc = F.dropout(self.fc2(mean_token_output), p = 0.1) # Dropout\n",
-    "        return self.softmax(fc) # softmax"
+    "        fc_drop = F.dropout(self.fc(mean_token_output), p = 0.1) # Dropout\n",
+    "        return self.softmax(fc_drop) # softmax"
    ]
   },
   {
@@ -237,7 +237,7 @@
       "SAMRRnn(\n",
       "  (e): Embedding(8371, 1000)\n",
       "  (rnn): LSTM(1000, 1000)\n",
-      "  (fc2): Linear(in_features=1000, out_features=5, bias=True)\n",
+      "  (fc): Linear(in_features=1000, out_features=5, bias=True)\n",
       "  (softmax): LogSoftmax()\n",
       ")\n"
      ]
@@ -288,16 +288,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training loss for epoch 1 is 1.1370483448093305 and accuracy is 59267/109242 = 54%\n",
-      "Valid loss for epoch 1 is 1.0741286979103961 and accuracy is 27113/46818 = 57%\n",
-      "Training loss for epoch 2 is 0.9743161132597954 and accuracy is 66223/109242 = 60%\n",
-      "Valid loss for epoch 2 is 1.0265675432338093 and accuracy is 27975/46818 = 59%\n",
-      "Training loss for epoch 3 is 0.9224444944898141 and accuracy is 68846/109242 = 63%\n",
-      "Valid loss for epoch 3 is 1.020761139547969 and accuracy is 28747/46818 = 61%\n",
-      "Training loss for epoch 4 is 0.8891068968891004 and accuracy is 70513/109242 = 64%\n",
-      "Valid loss for epoch 4 is 1.0351875576827725 and accuracy is 28750/46818 = 61%\n",
-      "Training loss for epoch 5 is 0.8654906678707414 and accuracy is 71486/109242 = 65%\n",
-      "Valid loss for epoch 5 is 1.0427590663951793 and accuracy is 28998/46818 = 61%\n"
+      "Training loss for epoch 1 is 1.1334195448420301 and accuracy is 59451/109242 = 54%\n",
+      "Valid loss for epoch 1 is 1.0469214301569876 and accuracy is 27160/46818 = 58%\n",
+      "Training loss for epoch 2 is 0.971432147931617 and accuracy is 66319/109242 = 60%\n",
+      "Valid loss for epoch 2 is 1.0268153450898376 and accuracy is 28267/46818 = 60%\n",
+      "Training loss for epoch 3 is 0.9164669286855327 and accuracy is 69045/109242 = 63%\n",
+      "Valid loss for epoch 3 is 1.0329782618039838 and accuracy is 28609/46818 = 61%\n",
+      "Training loss for epoch 4 is 0.8832143656391809 and accuracy is 70853/109242 = 64%\n",
+      "Valid loss for epoch 4 is 1.0332610752689593 and accuracy is 28849/46818 = 61%\n",
+      "Training loss for epoch 5 is 0.8605988340422679 and accuracy is 71990/109242 = 65%\n",
+      "Valid loss for epoch 5 is 1.0647938718269827 and accuracy is 28684/46818 = 61%\n"
      ]
     }
    ],
@@ -375,14 +375,14 @@
     "    def __init__(self, n_vocab, n_hidden, n_cat, n_kernel, kernel_sizes, bs = 1):\n",
     "        super().__init__()\n",
     "        \n",
-    "        Vocab = n_vocab ## 已知词的数量\n",
-    "        Dim = n_hidden ##每个词向量长度\n",
-    "        Cla = n_cat  ##类别数\n",
+    "        self.n_vocab = n_vocab ## 已知词的数量\n",
+    "        self.n_hidden = n_hidden ##每个词向量长度\n",
+    "        self.n_cat = n_cat  ##类别数\n",
     "        Ci = 1  ##输入的channel数\n",
-    "        Knum = n_kernel ## 每种卷积核的数量\n",
-    "        Ks = kernel_sizes ## 卷积核list，形如[2,3,4]\n",
+    "        self.n_kernel = n_kernel ## 每种卷积核的数量\n",
+    "        self.kernel_sizes = kernel_sizes ## 卷积核list，形如[2,3,4]\n",
     "        self.bs = bs\n",
-    "        self.embed = nn.Embedding(Vocab,Dim) ## 词向量，这里直接随机\n",
+    "        self.embed = nn.Embedding(Vocab,Dim) \n",
     "        \n",
     "        self.convs = nn.ModuleList([nn.Conv2d(Ci,Knum,(K,Dim)) for K in Ks]) ## 卷积层\n",
     "        self.dropout = nn.Dropout(args.dropout) \n",
